// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`headings should render correctly (snapshot) 1`] = `
<div>
  <h1
    class="ant-typography mdx-heading dark:text-light heading h1"
  >
    Heading
  </h1>
</div>
`;

exports[`headings should render correctly (snapshot) 2`] = `
<div>
  <h2
    class="ant-typography mdx-heading dark:text-light heading h2"
  >
    Heading
  </h2>
</div>
`;

exports[`headings should render correctly (snapshot) 3`] = `
<div>
  <h3
    class="ant-typography mdx-heading dark:text-light heading h3"
  >
    Heading
  </h3>
</div>
`;

exports[`headings should render correctly (snapshot) 4`] = `
<div>
  <h4
    class="ant-typography mdx-heading dark:text-light heading h4"
  >
    Heading
  </h4>
</div>
`;

exports[`headings should render correctly (snapshot) 5`] = `
<div>
  <h5
    class="ant-typography mdx-heading dark:text-light heading h5"
  >
    Heading
  </h5>
</div>
`;

exports[`headings should render correctly (snapshot) 6`] = `
<div>
  <h5
    class="ant-typography mdx-heading dark:text-light heading h6"
  >
    Heading
  </h5>
</div>
`;
